Should just need to work on the README.md now.

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,22 @@
   overflow-y: scroll;
 }
 
+.acceptStory {
+  float: left
+}
+
+.rejectStory {
+  float: right
+}
+
 th {
   cursor: pointer;
+}
+
+.acceptedRow {
+  color: green;
+}
+
+.rejectedRow {
+  color: red;
 }
